--- a/_includes/components/search_header.html
+++ b/_includes/components/search_header.html
@@ -1,4 +1,4 @@
-{% capture search_placeholder %}{% include search_placeholder_custom.html %}{% endcapture %}
+<!-- {% capture search_placeholder %}{% include search_placeholder_custom.html %}{% endcapture %}
 
 <div class="search">
   <div class="search-input-wrap">
@@ -6,4 +6,4 @@
     <label for="search-input" class="search-label"><svg viewBox="0 0 24 24" class="search-icon"><use xlink:href="#svg-search"></use></svg></label>
   </div>
   <div id="search-results" class="search-results"></div>
-</div>
+</div> -->
