--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -1,6 +1,11 @@
-<div class="side-bar">
+<style>
+  .side-bar-custom{
+    margin-left: 10%;
+  }
+</style>
+<div class="side-bar-custom">
   <div class="site-header">
-    <a href="{{ '/' | relative_url }}" class="site-title lh-tight">{% include title.html %}</a>
+    
     <a href="#" id="menu-button" class="site-button">
       <svg viewBox="0 0 24 24" class="icon"><use xlink:href="#svg-menu"></use></svg>
     </a>
