--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -16,7 +16,7 @@
   }
 
   @include mq(lg) {
-    width: calc((100% - #{$nav-width + $content-width}) / 2 + #{$nav-width});
+    width: 30%;
     min-width: $nav-width;
   }
 }
@@ -54,7 +54,7 @@
 .main-header {
   z-index: 0;
   display: none;
-  background-color: $sidebar-color;
+  background-color: #6957E7;
 
   @include mq(md) {
     display: flex;
@@ -103,6 +103,7 @@
   display: flex;
   min-height: $header-height;
   align-items: center;
+  margin-top: 0px;
 
   @include mq(md) {
     height: $header-height;
@@ -114,14 +115,18 @@
 .site-title {
   @include container;
 
-  flex-grow: 1;
+  flex-grow: 0;
+  color: white !important;
   display: flex;
   height: 100%;
   align-items: center;
   padding-top: $sp-3;
   padding-bottom: $sp-3;
   color: $body-heading-color;
+  margin-left: 10%;
+  z-index: 99;
   @include fs-6;
+  
 
   @include mq(md) {
     padding-top: $sp-2;
@@ -153,14 +158,14 @@
   }
 }
 
-.site-title:hover {
-  background-image: linear-gradient(
-    -90deg,
-    rgba($feedback-color, 1) 0%,
-    rgba($feedback-color, 0.8) 80%,
-    rgba($feedback-color, 0) 100%
-  );
-}
+// .site-title:hover {
+//   background-image: linear-gradient(
+//     -90deg,
+//     rgba($feedback-color, 1) 0%,
+//     rgba($feedback-color, 0.8) 80%,
+//     rgba($feedback-color, 0) 100%
+//   );
+// }
 
 .site-button:hover {
   background-image: linear-gradient(
