--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -59,6 +59,28 @@
         {% endif %}
       {% endfor %}
     {% endif %}
+    <style>
+      .sponsored{
+        width: 150px;
+        height: 300px;
+        margin-left: 20px;
+       border: 2px solid #B34F69;
+      }
+      .btn-success{
+        margin-left: 20px;
+        width: 150px;
+        background-color: #7B69FD;
+        border-radius: 0px !important;
+        margin-top: 20px;
+        margin-bottom: 20px;
+      }
+    </style>
+    <button class="btn btn-success">Sponsored Link</button>
+   <a href="#">
+    <div class="sponsored">
+
+    </div>
+   </a>
   </nav>
 
 
