--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,11 @@ layout: table_wrappers
 <html lang="{{ site.lang | default: 'en-US' }}">
 {% include head.html %}
 <body>
+  <style>
+    a{
+      text-decoration: none !important;
+    }
+  </style>
   {% include components/header.html %}
   {% include icons/icons.html %}
   {% include components/sidebar.html %}
